tests/mstr/compile-fail/undefined-dead.mstr
(module 'tests 'compile-fail 'undefined-dead)

(state (start)
  (case
    ((= 1 1) 7)
    (default missing-value)))
